"""Add contracts and pricing tables

Revision ID: 9986fca6f1d0
Revises: a1b2c3d4e5f6
Create Date: 2026-04-11 14:32:49.465505

"""
from typing import Sequence, Union

from alembic import op
import sqlalchemy as sa
from sqlalchemy.dialects import postgresql

# revision identifiers, used by Alembic.
revision: str = '9986fca6f1d0'
down_revision: Union[str, Sequence[str], None] = 'a1b2c3d4e5f6'
branch_labels: Union[str, Sequence[str], None] = None
depends_on: Union[str, Sequence[str], None] = None


def upgrade() -> None:
    """Upgrade schema."""
    # ### commands auto generated by Alembic - please adjust! ###
    op.create_table('llm_api_keys',
    sa.Column('id', sa.String(length=36), nullable=False),
    sa.Column('name', sa.String(length=100), nullable=False),
    sa.Column('key_prefix', sa.String(length=16), nullable=False),
    sa.Column('hashed_key', sa.String(length=128), nullable=False),
    sa.Column('tenant_id', sa.String(length=100), nullable=True),
    sa.Column('created_by', sa.String(length=36), nullable=False),
    sa.Column('is_active', sa.Boolean(), nullable=False),
    sa.Column('created_at', sa.DateTime(timezone=True), nullable=False),
    sa.Column('last_used_at', sa.DateTime(timezone=True), nullable=True),
    sa.Column('expires_at', sa.DateTime(timezone=True), nullable=True),
    sa.PrimaryKeyConstraint('id'),
    sa.UniqueConstraint('hashed_key')
    )
    op.create_index('ix_api_keys_prefix', 'llm_api_keys', ['key_prefix'], unique=False)
    op.create_index('ix_api_keys_tenant', 'llm_api_keys', ['tenant_id'], unique=False)
    op.create_table('llm_model_pricing',
    sa.Column('id', sa.UUID(), nullable=False, comment='Pricing record identifier'),
    sa.Column('model', sa.String(length=100), nullable=False, comment='LLM model name (e.g. gpt-4, mistral, claude-3-haiku)'),
    sa.Column('provider', sa.String(length=50), nullable=True, comment='Provider name. Auto-inferred if not set.'),
    sa.Column('input_price_per_1k', sa.Numeric(precision=12, scale=8), nullable=False, comment='USD cost per 1,000 input tokens'),
    sa.Column('output_price_per_1k', sa.Numeric(precision=12, scale=8), nullable=False, comment='USD cost per 1,000 output tokens'),
    sa.Column('valid_from', sa.Date(), nullable=False, comment='Date this pricing tier becomes effective'),
    sa.Column('valid_until', sa.Date(), nullable=True, comment='Date this pricing tier expires. NULL = currently active.'),
    sa.Column('created_at', sa.DateTime(timezone=True), nullable=False),
    sa.PrimaryKeyConstraint('id'),
    comment='Model pricing tiers with date ranges.'
    )
    op.create_index(op.f('ix_llm_model_pricing_model'), 'llm_model_pricing', ['model'], unique=False)
    op.create_index('ix_model_pricing_model_valid', 'llm_model_pricing', ['model', 'valid_from'], unique=False)
    op.create_table('llm_tenant_contracts',
    sa.Column('id', sa.UUID(), nullable=False, comment='Contract identifier'),
    sa.Column('tenant_id', sa.String(length=100), nullable=False, comment='Tenant this contract applies to'),
    sa.Column('contract_type', sa.String(length=50), nullable=False, comment='Contract type: pay_as_you_go, forfait, hybrid'),
    sa.Column('base_fee_usd', sa.Numeric(precision=10, scale=2), nullable=False, comment='Monthly flat fee in USD'),
    sa.Column('forfait_tokens', sa.BigInteger(), nullable=False, comment='Included token allowance per month'),
    sa.Column('overage_rate_per_1k', sa.Numeric(precision=10, scale=6), nullable=False, comment='Cost per 1K tokens above forfait allowance'),
    sa.Column('currency', sa.String(length=10), nullable=False, comment='Billing currency'),
    sa.Column('is_active', sa.Boolean(), nullable=False, comment='Active contracts are used for billing; inactive are archived'),
    sa.Column('description', sa.Text(), nullable=True, comment='Human-readable contract description'),
    sa.Column('created_at', sa.DateTime(timezone=True), nullable=False),
    sa.Column('updated_at', sa.DateTime(timezone=True), nullable=False),
    sa.PrimaryKeyConstraint('id'),
    comment='Per-tenant billing contracts. Replaces hardcoded dict.'
    )
    op.create_index(op.f('ix_llm_tenant_contracts_tenant_id'), 'llm_tenant_contracts', ['tenant_id'], unique=True)
    op.drop_index(op.f('ix_assistant_log_created'), table_name='llm_dashboard_assistant_log')
    op.drop_index(op.f('ix_assistant_log_user'), table_name='llm_dashboard_assistant_log')
    op.drop_table('llm_dashboard_assistant_log')
    op.alter_column('llm_auth_users', 'hashed_password',
               existing_type=sa.VARCHAR(length=200),
               type_=sa.String(length=300),
               existing_nullable=False)
    op.create_unique_constraint(None, 'llm_auth_users', ['username'])
    # ### end Alembic commands ###


def downgrade() -> None:
    """Downgrade schema."""
    # ### commands auto generated by Alembic - please adjust! ###
    op.drop_constraint(None, 'llm_auth_users', type_='unique')
    op.alter_column('llm_auth_users', 'hashed_password',
               existing_type=sa.String(length=300),
               type_=sa.VARCHAR(length=200),
               existing_nullable=False)
    op.create_table('llm_dashboard_assistant_log',
    sa.Column('id', sa.VARCHAR(length=36), autoincrement=False, nullable=False),
    sa.Column('user_id', sa.VARCHAR(length=100), server_default=sa.text("'anonymous'::character varying"), autoincrement=False, nullable=False),
    sa.Column('question_preview', sa.VARCHAR(length=200), autoincrement=False, nullable=True),
    sa.Column('question_type', sa.VARCHAR(length=100), autoincrement=False, nullable=True),
    sa.Column('tenant_scope', sa.VARCHAR(length=100), autoincrement=False, nullable=True),
    sa.Column('tokens_used', sa.INTEGER(), server_default=sa.text('0'), autoincrement=False, nullable=False),
    sa.Column('llm_model_used', sa.VARCHAR(length=100), autoincrement=False, nullable=True),
    sa.Column('response_time_ms', sa.INTEGER(), autoincrement=False, nullable=True),
    sa.Column('created_at', postgresql.TIMESTAMP(timezone=True), autoincrement=False, nullable=False),
    sa.PrimaryKeyConstraint('id', name=op.f('llm_dashboard_assistant_log_pkey'))
    )
    op.create_index(op.f('ix_assistant_log_user'), 'llm_dashboard_assistant_log', ['user_id'], unique=False)
    op.create_index(op.f('ix_assistant_log_created'), 'llm_dashboard_assistant_log', ['created_at'], unique=False)
    op.drop_index(op.f('ix_llm_tenant_contracts_tenant_id'), table_name='llm_tenant_contracts')
    op.drop_table('llm_tenant_contracts')
    op.drop_index('ix_model_pricing_model_valid', table_name='llm_model_pricing')
    op.drop_index(op.f('ix_llm_model_pricing_model'), table_name='llm_model_pricing')
    op.drop_table('llm_model_pricing')
    op.drop_index('ix_api_keys_tenant', table_name='llm_api_keys')
    op.drop_index('ix_api_keys_prefix', table_name='llm_api_keys')
    op.drop_table('llm_api_keys')
    # ### end Alembic commands ###
