@startuml ch3_er_database
' ============================================================
' CHAPITRE 3 — Diagramme Entité-Relation (Schéma Physique)
' Figure 3.x : Modèle de données physique de la plateforme
' ============================================================

skinparam backgroundColor #FFFFFF
skinparam defaultFontName Arial
skinparam defaultFontSize 9
skinparam roundcorner 5

skinparam entity {
  BackgroundColor #ECF0F1
  BorderColor #2C3E50
  FontColor #2C3E50
}

title <size:16><b>Modèle de Données Physique — LLM Dashboard</b></size>

' ── Authentification ──
entity "llm_tenant" as tenant {
  * **id** : UUID <<PK>>
  --
  name : VARCHAR(100)
  slug : VARCHAR(50) <<UNIQUE>>
  is_active : BOOLEAN
  settings : JSONB
  created_at : TIMESTAMPTZ
}

entity "llm_auth_user" as user {
  * **id** : UUID <<PK>>
  --
  * tenant_id : UUID <<FK>>
  email : VARCHAR(255) <<UNIQUE>>
  full_name : VARCHAR(100)
  hashed_password : VARCHAR(255)
  role : VARCHAR(20)
  is_active : BOOLEAN
  created_at : TIMESTAMPTZ
}

entity "llm_api_key" as apikey {
  * **id** : UUID <<PK>>
  --
  * user_id : UUID <<FK>>
  * tenant_id : UUID <<FK>>
  key_hash : VARCHAR(128) <<UNIQUE>>
  name : VARCHAR(100)
  is_active : BOOLEAN
  last_used_at : TIMESTAMPTZ
  created_at : TIMESTAMPTZ
}

entity "llm_virtual_key" as vkey {
  * **id** : UUID <<PK>>
  --
  * user_id : UUID <<FK>>
  * tenant_id : UUID <<FK>>
  name : VARCHAR(100)
  budget_limit : DECIMAL(12,2)
  current_spend : DECIMAL(12,2)
  is_active : BOOLEAN
}

' ── Gateway & Logs ──
entity "llm_token_log" as tokenlog {
  * **id** : UUID <<PK>>
  --
  * tenant_id : UUID <<FK>>
  * api_key_id : UUID <<FK>>
  session_id : UUID <<FK>> <<NULLABLE>>
  timestamp : TIMESTAMPTZ
  provider : VARCHAR(50)
  model : VARCHAR(100)
  input_tokens : INTEGER
  output_tokens : INTEGER
  total_tokens : INTEGER
  cost_usd : DECIMAL(12,6)
  latency_ms : INTEGER
  status : VARCHAR(20)
  metadata : JSONB
  ..
  <<HYPERTABLE on timestamp>>
}

entity "governance_rule" as rule {
  * **id** : UUID <<PK>>
  --
  * tenant_id : UUID <<FK>>
  rule_type : VARCHAR(30)
  action : VARCHAR(20)
  threshold : FLOAT
  scope : VARCHAR(50)
  is_active : BOOLEAN
  created_at : TIMESTAMPTZ
}

' ── Analytics ──
entity "llm_cost_daily" as costd {
  * **id** : UUID <<PK>>
  --
  * tenant_id : UUID <<FK>>
  date : DATE
  provider : VARCHAR(50)
  model : VARCHAR(100)
  total_tokens : BIGINT
  total_cost : DECIMAL(12,6)
  request_count : INTEGER
  error_count : INTEGER
  avg_latency_ms : FLOAT
}

entity "llm_cost_monthly" as costm {
  * **id** : UUID <<PK>>
  --
  * tenant_id : UUID <<FK>>
  month : SMALLINT
  year : SMALLINT
  provider : VARCHAR(50)
  model : VARCHAR(100)
  total_tokens : BIGINT
  total_cost : DECIMAL(12,6)
  request_count : INTEGER
}

entity "llm_model_pricing" as pricing {
  * **id** : UUID <<PK>>
  --
  provider : VARCHAR(50)
  model : VARCHAR(100)
  input_price_per_1k : DECIMAL(10,8)
  output_price_per_1k : DECIMAL(10,8)
  effective_from : DATE
  effective_to : DATE <<NULLABLE>>
  is_active : BOOLEAN
}

' ── Détection ──
entity "llm_anomaly" as anomaly {
  * **id** : UUID <<PK>>
  --
  * tenant_id : UUID <<FK>>
  anomaly_type : VARCHAR(30)
  severity : VARCHAR(20)
  algorithm_used : VARCHAR(30)
  z_score : FLOAT
  expected_value : FLOAT
  actual_value : FLOAT
  details : JSONB
  detected_at : TIMESTAMPTZ
}

entity "anomaly_explanation" as explanation {
  * **id** : UUID <<PK>>
  --
  * anomaly_id : UUID <<FK>>
  explanation_text : TEXT
  root_cause : VARCHAR(200)
  recommendations : JSONB
  embedding : VECTOR(384)
  llm_provider : VARCHAR(50)
  created_at : TIMESTAMPTZ
}

entity "llm_token_baseline" as baseline {
  * **id** : UUID <<PK>>
  --
  * tenant_id : UUID <<FK>>
  dimension : VARCHAR(50)
  dimension_value : VARCHAR(100)
  mean_value : FLOAT
  std_value : FLOAT
  sample_size : INTEGER
  updated_at : TIMESTAMPTZ
}

' ── Prévision ──
entity "forecast_result" as forecast {
  * **id** : UUID <<PK>>
  --
  * tenant_id : UUID <<FK>>
  horizon_days : INTEGER
  optimistic_cost : DECIMAL(12,2)
  baseline_cost : DECIMAL(12,2)
  pessimistic_cost : DECIMAL(12,2)
  risk_level : VARCHAR(20)
  created_at : TIMESTAMPTZ
}

' ── Billing ──
entity "billing_contract" as contract {
  * **id** : UUID <<PK>>
  --
  * tenant_id : UUID <<FK>> <<UNIQUE>>
  contract_type : VARCHAR(20)
  status : VARCHAR(20)
  base_fee : DECIMAL(12,2)
  included_tokens : BIGINT
  overage_rate : FLOAT
  discount_pct : FLOAT
  start_date : DATE
  end_date : DATE
}

entity "invoice" as invoice {
  * **id** : UUID <<PK>>
  --
  * tenant_id : UUID <<FK>>
  * contract_id : UUID <<FK>>
  month : SMALLINT
  year : SMALLINT
  total_amount : DECIMAL(12,2)
  status : VARCHAR(20)
  due_date : DATE
  created_at : TIMESTAMPTZ
}

entity "invoice_line_item" as lineitem {
  * **id** : UUID <<PK>>
  --
  * invoice_id : UUID <<FK>>
  model : VARCHAR(100)
  provider : VARCHAR(50)
  tokens : BIGINT
  unit_price : DECIMAL(10,8)
  total_price : DECIMAL(12,6)
}

' ── Sessions ──
entity "llm_session" as session {
  * **id** : UUID <<PK>>
  --
  * tenant_id : UUID <<FK>>
  api_key_id : UUID <<FK>>
  started_at : TIMESTAMPTZ
  ended_at : TIMESTAMPTZ <<NULLABLE>>
  total_turns : INTEGER
  total_tokens : BIGINT
  total_cost : DECIMAL(12,6)
  status : VARCHAR(20)
}

' ── Prompts ──
entity "prompt_template" as prompt {
  * **id** : UUID <<PK>>
  --
  * tenant_id : UUID <<FK>>
  name : VARCHAR(200)
  template_content : TEXT
  variables : JSONB
  version : INTEGER
  status : VARCHAR(20)
  category : VARCHAR(50)
  tags : JSONB
  created_by : UUID <<FK>>
  created_at : TIMESTAMPTZ
}

' ═══════ RELATIONS ═══════

tenant ||--o{ user
tenant ||--o{ apikey
tenant ||--o{ tokenlog
tenant ||--o{ rule
tenant ||--o{ costd
tenant ||--o{ anomaly
tenant ||--o{ baseline
tenant ||--o{ forecast
tenant ||--|| contract
tenant ||--o{ session
tenant ||--o{ prompt

user ||--o{ apikey
user ||--o{ vkey

apikey ||--o{ tokenlog

session ||--o{ tokenlog

anomaly ||--o| explanation
anomaly }o--|| baseline

contract ||--o{ invoice
invoice ||--|{ lineitem

costd }o--|| costm

@enduml
